[package]
name = "swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.27.0", features=["init-if-needed"]}
anchor-spl = "0.27.0"
bytemuck = "1.11.0"
